Added basic front end.

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,133 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Arial';
 }
+
+button {
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.no-events {
+  pointer-events: none;
+}
+
+.light-icon {
+  color: #ccc;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+}
+
+.light-icon:hover {
+  color: dodgerblue;
+  cursor: pointer;
+}
+
+.app {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+header {
+  background-color: dodgerblue;
+  color: white;
+  padding: 1rem 3rem;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header button {
+  font-weight: 400;
+  background-color: transparent;
+  color: white;
+  border: 0;
+}
+
+section {
+  padding: 5rem 3rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow-y: scroll;
+}
+
+section header {
+  background-color: white;
+  color: #333;
+  border-bottom: 1px solid #ccc;
+  padding: 0rem;
+  padding-bottom: .5rem;
+  font-weight: bold;
+}
+
+section p.content {
+  font-size: 1.3rem;
+  line-height: 1.9rem;
+  padding: 1.5rem 0;
+  color: #333;
+}
+
+section textarea.content {
+  width: 100%;
+  padding: 1rem;
+  margin: 5rem 0;
+  border: 1px solid #eee;
+  font-family: 'Arial';
+  font-size: 1.3rem;
+  line-height: 1.9rem;
+  color: #333;
+}
+
+footer {
+  background-color: #eee;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer button {
+  width: 100%;
+  background-color: dodgerblue;
+  color: white;
+  padding: 1rem;
+  cursor: pointer;
+  border: 0;
+  font-weight: 400;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+
+footer button.secondary {
+  background-color: #1eff56;
+}
+
+footer button.warning {
+  background-color: #ff651e;
+}
+
+footer button:hover {
+  background-color: #56aafd;
+}
+/*# sourceMappingURL=index.css.map */
