--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
 body {
   margin: 0;
   font-family: 'Arial';
+  background-color: white;
+}
+
+h2 {
+  color: #ccc;
 }
 
 path, svg {
@@ -207,14 +212,59 @@ footer button:hover {
   background-color: #56aafd;
 }
 
+.thumbnail-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
 .deck-thumbnail {
   text-decoration: none;
   color: #333;
   padding: 1rem;
   border: 1px solid #eee;
-  margin: 1rem;
   border-radius: .5rem;
   display: block;
+  background-color: #f9f9f9;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.deck-thumbnail div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.deck-thumbnail h3 {
+  margin: 0;
+}
+
+.deck-thumbnail path {
+  fill: #aaa;
+}
+
+.deck-thumbnail .icon {
+  margin-right: 1rem;
+}
+
+.deck-thumbnail .icon path {
+  fill: dodgerblue;
+}
+
+.deck-thumbnail:hover {
+  background-color: #eee;
 }
 
 @media only screen and (min-width: 700px) {
