--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,16 @@
 
 body {
   margin: 0;
+  background-color: #eee;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 button {
@@ -24,6 +34,60 @@ button.btn-icon:hover {
   color: purple;
 }
 
+button.btn-secondary {
+  border: 0;
+  background-color: transparent;
+  color: #999;
+  width: 100%;
+  padding: 1rem;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+button.btn-secondary:hover {
+  color: purple;
+}
+
+button.btn-change {
+  width: 4rem;
+  height: 4rem;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  border: 0;
+  background-color: transparent;
+  position: absolute;
+  -webkit-transition: .3s;
+  transition: .3s;
+  border-radius: 50%;
+  /*     box-shadow : 0 .5rem 1rem rgba(0, 0, 0, .1);
+ */
+  z-index: 10;
+  top: calc(50% - 2.5rem);
+}
+
+button.btn-change.left {
+  left: -6rem;
+}
+
+button.btn-change.right {
+  right: -6rem;
+}
+
+button.btn-change .icon {
+  color: #ccc;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+button.btn-change:hover {
+  background-color: white;
+}
+
+button.btn-change:hover .icon {
+  color: purple;
+}
+
 path, svg {
   pointer-events: none;
 }
@@ -39,7 +103,7 @@ path, svg {
   height: 100vh;
 }
 
-h2 {
+h1 {
   text-align: center;
   color: purple;
   margin: 0;
@@ -55,29 +119,23 @@ header .buttons {
 }
 
 header.navbar {
-  padding: 1rem;
+  padding: 1rem 1rem;
   border-bottom: 1px solid #eee;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
   margin: 0;
-  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   background-color: white;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 header.navbar .logo {
   color: purple;
   text-decoration: none;
   font-weight: 900;
+  font-size: 1.2rem;
 }
 
 section {
@@ -88,13 +146,20 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 0 1rem;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  /*   height: 100%;
- */
-  /*  display: grid; */
+  height: 100%;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section.landing {
+  text-align: center;
+}
+
+section.landing p {
+  color: purple;
+  font-size: 1.2rem;
 }
 
 input[type=text],
@@ -154,15 +219,48 @@ form button.secondary {
   width: 100%;
 }
 
-.button-list {
+form#new-deck {
+  margin: 3rem 0;
+}
+
+form#new-deck > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 1rem;
+}
+
+form#new-deck input[type=text] {
+  margin-bottom: 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: 0;
+}
+
+form#new-deck button {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  background-color: #f9f9f9;
+  border: 0;
+  color: purple;
+  border: 1px solid #eee;
+  border-left: 0;
+}
+
+form#new-deck button:hover {
+  background-color: purple;
+  color: white;
+}
+
+.button-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.button-list li {
+  margin-bottom: 1rem;
 }
 
 .btn-link {
@@ -175,9 +273,7 @@ form button.secondary {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1rem;
-  background-color: #f9f9f9;
-  border: 1px solid #eee;
+  padding: .5rem 1rem;
   border-radius: .5rem;
   text-decoration: none;
   color: #333;
@@ -221,75 +317,89 @@ form button.secondary {
 }
 
 .card {
-  border-radius: .5rem;
-  border: 1px solid #eee;
-  padding: 1rem 1rem;
-  background-color: #f9f9f9;
+  padding: 5rem;
+  margin: 5rem 0;
+  background-color: white;
   overflow-y: auto;
-  max-height: 50vh;
+  height: 50%;
+  position: relative;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .card p {
-  font-size: 1rem;
+  font-size: 1.0rem;
 }
 
 .card header {
   margin: 0;
   color: #999;
-  text-align: center;
-}
-
-.slider-buttons {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 1rem;
-  gap: 2rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 1rem 0;
-  position: fixed;
-  bottom: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #eee;
 }
 
-.slider-buttons button {
-  padding: 1rem;
-  background-color: purple;
-  border: 1px solid purple;
-  border-radius: 50%;
+.editor {
+  padding: 5rem;
+  background-color: white;
+  overflow-y: auto;
+  position: relative;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.editor header {
+  margin: 0;
+  color: #999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #eee;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
   display: -ms-grid;
   display: grid;
-  place-items: center;
-  width: 5rem;
-  height: 5rem;
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  -webkit-transition: .3s;
-  transition: .3s;
-  font-size: 1rem;
-  cursor: pointer;
+  place-content: center;
 }
 
-.slider-buttons button:hover {
-  background-color: #a300a3;
-}
-
-.slider-buttons button.light {
-  background-color: #f9f9f9;
+.loader .loader-icon {
   color: purple;
-  border-color: #eee;
-  width: 4rem;
-  height: 4rem;
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
 }
 
-.slider-buttons button.light:hover {
-  background-color: #eee;
+@-webkit-keyframes spin {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 .categories {
@@ -349,6 +459,69 @@ form button.secondary {
 
 .categories input[type="radio"]:checked + label span path {
   fill: white;
+}
+
+.sidebar {
+  width: 25rem;
+  background-color: white;
+  height: 100%;
+  padding: 1rem;
+  margin-left: -25rem;
+  -webkit-transition: .3s;
+  transition: .3s;
+  position: relative;
+}
+
+.sidebar.open {
+  margin-left: 0rem;
+}
+
+.sidebar .btn-sidebar {
+  position: absolute;
+  right: -5rem;
+  color: #ccc;
+  border: 0;
+  padding: 1rem;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  -webkit-transition: .3s;
+  transition: .3s;
+  /* box-shadow : 0 .5rem 1rem rgba(0, 0, 0, .1); */
+  background-color: transparent;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+
+.sidebar .btn-sidebar:hover {
+  color: purple;
+  background-color: white;
+}
+
+.curl {
+  width: 5rem;
+  height: 5rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  border: 0;
+  background: linear-gradient(135deg, #fff, #f9f9f9 50%, #ddd 50%, #eee 55%);
+  -webkit-box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+}
+
+.curl .icon {
+  color: #ccc;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.curl:hover .icon {
+  color: purple;
 }
 
 @media only screen and (min-width: 700px) {
