--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,24 @@ button {
     }
   }
 
+  &.btn-primary {
+    padding: 1rem;
+    background-color: purple;
+    border: 1px solid purple;
+    border-radius: .5rem;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: .3s;
+    font-size: 1rem;
+    cursor: pointer;
+    width: 100%;
+
+    &:hover {
+      background-color: rgb(163, 0, 163);
+    }
+  }
+
   &.btn-secondary {
     border: 0;
     background-color: transparent;
@@ -47,19 +65,18 @@ button {
     place-content: center;
     border: 0;
     background-color: transparent;
-    position: absolute;
+    position: fixed;
     transition: .3s;
     border-radius: 50%;
-/*     box-shadow : 0 .5rem 1rem rgba(0, 0, 0, .1);
- */    z-index: 10;
-    top: calc(50% - 2.5rem);
+    z-index: 10;
+    bottom: 1rem;
 
     &.left {
-      left: -6rem;
+      left: 1rem;
     }
 
     &.right {
-      right: -6rem;
+      right: 1rem;
     }
 
     .icon {
@@ -72,6 +89,22 @@ button {
       .icon {
         color: purple;
       }
+    }
+  }
+
+  &.btn-x {
+    /* position: absolute; */
+    top: 0;
+    right: 1rem;
+    background-color: transparent;
+    border: 0;
+    color: #ccc;
+    padding: 0;
+    transition: .3s;
+    margin-left: 1rem;
+
+    &:hover {
+      color: purple;
     }
   }
 }
@@ -100,7 +133,10 @@ header {
     margin-top: 1rem;
   }
 
+
+  /* remove? */
   &.navbar {
+    display: none;
     padding: 1rem 1rem;
     border-bottom: 1px solid #eee;
     text-align: center;
@@ -124,6 +160,7 @@ section {
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
   position: relative;
   justify-content: center;
 
@@ -178,12 +215,18 @@ form {
       background-color: rgb(163, 0, 163);
     }
 
-    &.secondary {
+    &.btn-secondary {
       margin: 1rem 0;
       background-color: #f9f9f9;
-      color: purple;
+      color: rgb(202, 0, 0);
       border: 1px solid #eee;
       width: 100%;
+
+      &:hover {
+        color: red;
+        background-color: #f0f0f0;
+      }
+      
     }
   }
 
@@ -200,6 +243,7 @@ form {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
       border-right: 0;
+      min-width: 0;
     }
 
     button {
@@ -224,7 +268,64 @@ form {
   padding: 0;
 
   li {
-    margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: .5rem 0;
+    padding: 1rem;
+    cursor: pointer;
+    border-radius: .5rem;
+    transition: .2s;
+    border: 1px solid transparent;
+
+    label {
+      color: #333;
+      pointer-events: none;
+    }
+
+    input[type=checkbox] {
+      display: none;
+      + label {
+        span {
+          width: 1rem;
+          height: 1rem;
+          margin-right: 1rem;
+          display: inline-block;
+
+          background-color: transparent;
+          border: 2px solid #ccc;
+          border-radius: 4px;
+        }
+      }
+
+      &:checked + label span{
+        background-color: purple;
+        border: 2px solid purple;
+      }
+    }
+
+    &:hover {
+      background-color: #f0f0f0;
+
+      input[type=checkbox] + label span{
+        background-color: purple;
+      }
+    }
+
+    &.selected {
+      background-color: #f9f9f9;
+      border-color: #eee;
+
+      label {
+        color: purple;
+      }
+
+      &:hover {
+        background-color: #f0f0f0;
+      }
+
+      
+    }
   }
 }
 
@@ -274,14 +375,34 @@ form {
   font-weight: bold;
 }
 
-.card {
-  padding: 5rem;
-  margin: 5rem 0;
-  background-color: white;
-  overflow-y: auto;
-  height: 50%;
+.card-wrapper {
   position: relative;
+  /* height: calc(100% - 12rem); */
+  height: 25rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  > div {
+    height: 100%;
+    width: 100%;
+  }
+
+  &.fill {
+    height: 100vh;
+  }
+}
+
+.card {
+  padding: 5rem 1rem;
+  background-color: white;
   transition: .5s;
+  overflow-y: auto;
+  margin: 1rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   p {
     font-size: 1.0rem;
@@ -291,19 +412,31 @@ form {
     margin: 0;
     color: #999;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
-    border-bottom: 1px solid #eee;
+    justify-content: flex-end;
+    align-items:baseline;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    background-color: transparent;
+    padding: 1rem 2rem;
+
+    h2 {
+      font-size: 1rem;
+      color: #ccc;
+      margin-left: 1rem;
+    }
   }
 }
 
 .editor {
-  padding: 5rem;
+  padding: 5rem 1rem;
   background-color: white;
-  overflow-y: auto;
   position: relative;
   transition: .5s;
-  
+  overflow-y: auto;
+  height: 100vh;
+  z-index: 100;
 
   header {
     margin: 0;
@@ -311,7 +444,6 @@ form {
     display: flex;
     justify-content: space-between;
     margin-bottom: 2rem;
-    border-bottom: 1px solid #eee;
   }
 }
 
@@ -343,82 +475,21 @@ form {
 
 
 
-
-
-
-.categories {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  margin-bottom: 3rem;
-
-  div {
-    display: inline-block;
-  }
-
-  input[type="radio"] {
-    display: none;
-
-    + label {
-      color: #333;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-
-      span {
-        display: inline-block;
-        width: 3rem;
-        height: 3rem;
-       /*  margin: -1px 4px 0 0; */
-      
-        /* vertical-align: middle; */
-        cursor: pointer;
-        border-radius: .5rem;
-        border: 1px solid #eee;
-/*         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
- */        /* background-repeat: no-repeat;
-        background-position: center; */
-        text-align: center;
-        line-height: 44px;
-        background-color: #f9f9f9;
-
-        transition: .3s;
-      }
-    }
-
-    /* &#color-1 + label span {
-      background-color: green;
-    }
-
-    &#color-2 + label span {
-      background-color: purple;
-    } */
-
-    &:checked + label span {
-      background-color: purple;
-      path {
-        fill: white;
-      }
-    }
-  }
-}
-
-
 .sidebar {
-  width: 25rem;
+  width: 100%;
   background-color: white;
   height: 100%;
   padding: 1rem;
-  margin-left: -25rem;
+  margin-left: -100%;
   transition: .3s;
-  position: relative;
-
-  &.open {
-    margin-left: 0rem;
-  }
+  position: fixed;
+  z-index: 99;
+  padding-top: 5rem;
 
   .btn-sidebar {
-    position: absolute;
-    right: -5rem;
+    position: fixed;
+    right: 1rem;
+    top: .8rem;
     color: #ccc;
     border: 0;
     padding: 1rem;
@@ -426,15 +497,39 @@ form {
     width: 4rem;
     height: 4rem;
     transition: .3s;
-    /* box-shadow : 0 .5rem 1rem rgba(0, 0, 0, .1); */
     background-color: transparent;
     display: grid;
     place-content: center;
+    z-index: 99;
 
 
     &:hover {
       color: purple;
       background-color: white;
+    }
+
+
+  }
+
+  &.open {
+    margin-left: 0rem;
+  }
+
+  .logo {
+    color: purple;
+    text-decoration: none;
+    font-weight: 900;
+    font-size: 1.2rem;
+    padding: 1rem 0;
+    display: block;
+    position: fixed;
+    left: 1rem;
+    top: 1rem;
+    transition: .3s;
+    z-index: 99;
+
+    &:hover {
+      color: rgb(163, 0, 163);
     }
   }
 }
@@ -447,7 +542,7 @@ form {
 	width:5rem;
 	height:5rem;
 	position: absolute;
-  right: 0;
+  right: 1rem;
   bottom: 0;
   display: grid;
   place-content: center;
@@ -456,12 +551,12 @@ form {
 	background : 
 		linear-gradient(
 			135deg, 
-			#fff, 
+			#f9f9f9, 
 			#f9f9f9 50%, 
 			#ddd 50%, 
       #eee 55%,
 		);
-	box-shadow : 0 0 1rem rgba(0, 0, 0, .3);
+	/* box-shadow : 0 0 1rem rgba(0, 0, 0, .3); */
 
   .icon {
     color: #ccc;
@@ -476,11 +571,91 @@ form {
 }
 
 
+@media only screen and (min-width: 768px) {
+  .sidebar {
+    max-width: 50%;
+  }
 
+  .card-wrapper {
+    margin: auto;
+    max-height: 25rem;
+    width: 66%;
+  }
 
-@media only screen and (min-width: 700px) {
+  button {
+  
+    &.btn-change {
+      width: 4rem;
+      height: 4rem;
+      position: absolute;
+      top: calc(50% - 2.5rem);
+  
+      &.left {
+        left: -6rem;
+      }
+  
+      &.right {
+        right: -6rem;
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: 400px) {
+  .card-wrapper {
+    height: calc(100% - 12rem);
+  }
+}
+
+@media only screen and (min-width: 960px) {
+
   section {
     margin: auto;
-    width: 60ch;
+    /* width: 60ch; */
+  }
+
+  .card-wrapper {
+    max-width: 60ch;
+
+    &.fill {
+      max-width: 100%;
+    }
+
+  }
+
+  .card {
+    padding: 5rem;
+    /* margin: 5rem 1rem; */
+  }
+
+  .editor {
+    padding: 5rem;
+
+    > *, > .btn-secondary {
+      margin: auto;
+      max-width: 60ch;
+    }
+
+    header {
+      margin: 2rem auto;
+    }
+  }
+
+  .sidebar {
+    position: relative;
+    width: 30rem;
+    margin-left: -30rem;
+  
+    .btn-sidebar {
+      position: absolute;
+      right: -5rem;
+    }
+  
+    .logo {
+      position: absolute;
+      left: initial;
+      right: -15rem;
+    }
   }
 }
